--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -94,3 +94,5 @@ obj-$(CONFIG_MSM_PACMAN)        += msm_pacman.o
 obj-y += project_info.o
 obj-y += boot_mode.o
 ##
+
+obj-$(CONFIG_STATE_NOTIFIER)		+= state_notifier.o
