--- a/arch/arm64/configs/yarpiin_defconfig
+++ b/arch/arm64/configs/yarpiin_defconfig
@@ -452,6 +452,7 @@ CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_DESPAIR=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
