--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -525,9 +525,9 @@ CONFIG_MSM_SCM=y
 CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
-CONFIG_MSM_CORE_CTL_HELPER=y
-CONFIG_MSM_PERFORMANCE=y
-CONFIG_ONEPLUS_HCUBE=m
+CONFIG_MSM_CORE_CTL_HELPER=n
+CONFIG_MSM_PERFORMANCE=n
+CONFIG_ONEPLUS_HCUBE=n
 CONFIG_KERNEL_TEXT_MPU_PROT=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_PARAM_READ_WRITE=y
@@ -589,3 +589,4 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_MSM_HOTPLUG=y
