--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -66,6 +66,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
