--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ extra_certificates
 signing_key.priv
 signing_key.x509
 x509.genkey
+
+# release files
+anykernel2/Image.gz-dtb
+anykernel2/modules/*
