--- a/anykernel2/ramdisk/init.abyss.rc
+++ b/anykernel2/ramdisk/init.abyss.rc
@@ -91,3 +91,6 @@ on property:sys.boot_completed=1
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/max_freq_hysteresis 80000
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boostpulse_duration 0
 
+   # set proper permissions
+   chmod 0444 /sys/devices/system/cpu/cpu4/core_ctl/min_cpus
+   chmod 0444 /sys/devices/system/cpu/cpu4/core_ctl/max_cpus
