--- a/anykernel2/ramdisk/init.abyss.rc
+++ b/anykernel2/ramdisk/init.abyss.rc
@@ -19,19 +19,14 @@ on property:sys.boot_completed=1
    write /sys/block/mmcblk0/queue/iosched/async_write_expire 450
    write /sys/block/mmcblk0/queue/iosched/sleep_latency_multiple 10
 
-   # Input boost settings
-   write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-   write /sys/module/cpu_boost/parameters/input_boost_freq "0:1248000 1:1248000 2:1248000 3:1248000 4:0 5:0 6:0 7:0"
-   write /sys/module/cpu_boost/parameters/boost_ms 0
-   write /sys/module/cpu_boost/parameters/input_boost_ms 60
-
    # Core control disabled, msm_thermal enabled
    write /sys/module/msm_thermal/core_control/enabled 0
    write /sys/module/msm_thermal/parameters/enabled Y
 
-   # Stock frequencies and interactive governor
-   # The user can overclock if they want but it is a little more stable to use these frequencies
-   # Little cluster governor - interactve
+   ###
+   # Governor settings by @Alcolawl and @shadowstep: DrunkSauce v1.2 adapted for the OnePlus 2
+   ###
+   # Little cluster governor - impulse
    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
@@ -39,10 +34,10 @@ on property:sys.boot_completed=1
    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
-   # Little cluster max - 1555 MHz
+   # Little cluster max - 1536 MHz
    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1555200
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1536000
    # Big cluster governor - interactve 
    chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
    chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
@@ -56,40 +51,48 @@ on property:sys.boot_completed=1
    chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1958400
 
-   # Governor settings by @nathanchance: Flash 1.0
+   write /sys/module/msm_performance/parameters/touchboost 0
+
+   # Input boost settings
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+   write /sys/module/cpu_boost/parameters/boost_ms 0
+   write /sys/module/cpu_boost/parameters/input_boost_freq "0:600000 1:600000 2:600000 3:600000 4:0 5:0 6:0 7:0"
+   write /sys/module/cpu_boost/parameters/input_boost_ms 40
+   write /sys/module/cpu_boost/parameters/load_based_syncs 0
+   write /sys/module/cpu_boost/parameters/migration_load_threshold 15
+   write /sys/module/cpu_boost/parameters/sync_threshold 0
+
    # Little cluster settings
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 99
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/above_hispeed_delay "20000 1344000:40000"
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_rate 30000
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 768000
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_slack -1
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "60 384000:50 460800:50 600000:55 672000:60 768000:60 864000:55 960000:90 1248000:90 1344000:80 1478000:90 1555200:99"
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 60000
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/ignore_hispeed_on_notif 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boost 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/fast_ramp_down 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/align_windows 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_migration_notif 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/max_freq_hysteresis 80000
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boostpulse_duration 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/go_hispeed_load 85
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/above_hispeed_delay 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/timer_rate 40000
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/hispeed_freq 960000
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/timer_slack -1
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/target_loads "80 384000:33 460800:25 600000:50 672000:65 768000:70 864000:85 960000:90 1248000:92 1555200:98"
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/min_sample_time 50000
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/powersave_bias 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/align_windows 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/impulse/max_freq_hysteresis 166667
 
    # Big cluster settings
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/go_hispeed_load 95
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay "40000 960000:60000 1728000:20000"
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate 30000
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/hispeed_freq 633600
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/go_hispeed_load 90
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate 20000
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/hispeed_freq 1440000
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_slack -1
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads "95 633600:80 768000:85 864000:90 960000:90 1248000:95 1344000:95 1444000:95 1536000:95 1632000:95 1728000:98 1824000:99 1958000:100"
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads "74 768000:73 864000:64 960000:80 1248000:61 1344000:69 1440000:64 1536000:74 1632000:69 1728000:67 1958400:72"
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 30000
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/ignore_hispeed_on_notif 0
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boost 0
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/fast_ramp_down 0
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/align_windows 0
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_migration_notif 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_migration_notif 1
    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_sched_load 0
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/max_freq_hysteresis 80000
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boostpulse_duration 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/max_freq_hysteresis 20000
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boostpulse_duration 80000
+   ###
+   # end Drunksauce
+   ###
 
    # set proper permissions
    chmod 0444 /sys/devices/system/cpu/cpu4/core_ctl/min_cpus
