--- a/arch/arm64/configs/hydra_defconfig
+++ b/arch/arm64/configs/hydra_defconfig
@@ -608,3 +608,4 @@ CONFIG_QUICK_WAKEUP=y
 CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y 
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
